# wlz

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
arb/: __init__.py  cross_monitor.py  main.py  trading_engine.py
arb/backtest/: __init__.py  engine.py  history.py  loader.py  metrics.py
arb/capital/: __init__.py  allocator.py
arb/config/: models.py  settings.py  symbols.yaml
arb/connectors/: __init__.py  base.py  ccxt_connector.py
arb/execution/: __init__.py  executor.py  live_executor.py  models.py
arb/marketdata/: __init__.py  cross_spread.py  spread.py
arb/monitoring/: __init__.py  alerts.py  confirm.py  health.py  logger.py  metrics_export.py
arb/optimize/: __init__.py  report.py  search.py  walk_forward.py
arb/persistence/: db.py  models.py
arb/risk/: __init__.py  manager.py  rules.py
arb/strategy/: __init__.py  signal.py
docker/: Dockerfile  docker-compose.yml
tests/: test_alerts.py  test_backtest.py  test_capital.py  test_confirm.py  test_execution.py  test_health.py  test_history.py  test_loader.py  test_metrics.py  test_optimize.py  test_risk.py  test_signal.py  test_spread.py  test_trading_engine.py
